--- a/style.css
+++ b/style.css
@@ -1,39 +1,5 @@
-body {
-    font-family: Roboto;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 100%;
-    letter-spacing: 2%;
-}
-
-ul li {
-    list-style: none;
-}
-
-h3 {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 36px;
-    letter-spacing: 6%;
-}
-
-main p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 3%;
-}
-
-footer {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 3%;
-}
-
-header p {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 100%;
-    letter-spacing: 2%;
-}
+@import url("./css/reset.css");
+@import url("./css/header.css");
+@import url("./css/main.css");
+@import url("./css/footer.css");
+@import url("./css/variables.css");
