--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,9 @@
     background-color: var(--lightBlue);
     color: white;
     transform: scale(1.03);
+    box-shadow: 0px 2px 2px 0px #0000001F;
+    box-shadow: 0px 1px 2px 0px #00000014;
+    box-shadow: 0px 3px 1px 0px #0000001A;
 }
 
 .item-btn1 {
@@ -94,7 +97,9 @@
 }
 
 .line-item:hover {
-    transform: scale(1.03);
+    box-shadow: 1px 4px 10px 0px #00000029;
+    box-shadow: 0px 4px 8px 0px #0000000F;
+    box-shadow: 0px 1px 5px 0px #0000001F;
 }
 
 
